--- a/T2/src/componentes/Estilo.css
+++ b/T2/src/componentes/Estilo.css
@@ -36,13 +36,13 @@ body {
     text-decoration: none;
     padding: 10px 15px;
     border-radius: 5px;
-    color: #fff;
-    background: linear-gradient(45deg, #6a11cb, #2575fc);
+    color: #000000;
+    background-color: #FFD700;
     transition: background 0.3s;
   }
   
   nav ul li a:hover {
-    background: linear-gradient(45deg, #2575fc, #6a11cb);
+    background-color: #ff00ff;
   }
   
   .search-bar {
@@ -75,6 +75,10 @@ body {
     width: 100%;
     height: 314px;
     object-fit: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+ 
 }
 
 
@@ -84,6 +88,7 @@ body {
   align-items: center;
   background-color: #ffffff;
   padding: 20px;
+
 }
 
 .banner2-text {
